# Breakout

./: .gitignore  CMakeLists.txt  README.md
assets/grids_layout/: layout_0.txt  layout_1.txt  layout_clear.txt  layout_clear_2.txt
include/: Game.h  README.md
include/Bricks/: BrickLoader.h  BrickSet.h
include/Entities/: Ball.h  Brick.h  IEntity.h  Paddle.h
include/GlobalStates/: PlayerData.h
include/Screens/: CreditsScreen.h  GameOverScreen.h  GameScreen.h  IScreen.h  MenuScreen.h  PauseScreen.h  ScreenManager.h  Screens.h  WinScreen.h
include/Textures/: TextureAtlas.h
include/UI/: Button.h  Cursor.h  GameScreenUI.h  IUserInterface.h  LevelsUI.h  MenuScreenUI.h  PauseScreenUI.h  Text.h  WinScreenUI.h
include/Utils/: Background.h  Concepts.h  Constants.h  DrawSprite.h  Grid.h  Parallax.h  TextureLoader.h  Translate.h
src/: Game.cpp  main.cpp
src/Bricks/: BrickLoader.cpp  BrickSet.cpp
src/Entities/: Ball.cpp  Brick.cpp  Paddle.cpp
src/Screens/: CreditsScreen.cpp  GameOverScreen.cpp  GameScreen.cpp  MenuScreen.cpp  PauseScreen.cpp  ScreenManager.cpp  WinScreen.cpp
src/Textures/: TextureAtlas.cpp
src/UI/: Button.cpp  GameScreenUI.cpp  LevelsUI.cpp  MenuScreenUI.cpp  PauseScreenUI.cpp  Text.cpp
src/Utils/: Background.cpp  Grid.cpp  TextureLoader.cpp
